# nuberu-experiments-results

./: .pre-commit-config.yaml  Interactive-Notebook.ipynb  Notebook.ipynb  Problem explorer.ipynb  README.md  Static-Notebook.ipynb  conlloovia_utils.py  plotting_utils.py  pyproject.toml
additional_files/configs/: config_poisson_drain_simple_q0.yaml  config_poisson_drain_simple_q1000.yaml  config_poisson_drain_smoothWRR_q0.yaml  config_poisson_drain_smoothWRR_q1000.yaml  config_poisson_hard_simple_q0.yaml  config_poisson_hard_simple_q1000.yaml  config_poisson_hard_smoothWRR_q0.yaml  config_poisson_hard_smoothWRR_q1000.yaml  config_trace_drain_simple_q0.yaml  config_trace_drain_simple_q1000.yaml  config_trace_drain_smoothWRR_q0.yaml  config_trace_drain_smoothWRR_q1000.yaml  config_trace_hard_simple_q0.yaml  config_trace_hard_simple_q1000.yaml  config_trace_hard_smoothWRR_q0.yaml  config_trace_hard_smoothWRR_q1000.yaml
additional_files/data/: sol_conlloovia_1_hour_a_2_static_unpredictable_ts_9.p
